--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<!--ビュー：ページの「見た目」を作るためのファイル-->
+
+<h2>タイトル</h2>
+
+<p><%= @list.title %></p>
+
+<h2>本文</h2>
+
+<p><%= @list.body %></p>
+
