--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,5 @@
 <!--ビュー：ページの「見た目」を作るためのファイル-->
+<!-- 詳細画面 -->
 
 <h2>タイトル</h2>
 
@@ -8,3 +9,4 @@
 
 <p><%= @list.body %></p>
 
+<%= link_to "編集", edit_list_path(@list.id) %> <!--編集画面(edit.html.erb)に遷移するリンクを設定-->
