--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Lists#edit</h1>
-<p>Find me in app/views/lists/edit.html.erb</p>
+<!--ビュー：ページの「見た目」を作るためのファイル-->
+<!-- 編集画面 -->
+
+<h1>編集画面</h1>
+
+<!-- form_withを利用すると、インスタンス変数を渡すだけで、
+      インスタンス変数内のモデルを解読して、投稿したタイトルと内容を代入する-->
+<%= form_with model: @list, url: update_list_path(@list.id), method: :patch do |f| %>   <!-- @～はインスタンス変数 -->
+
+  <h4>タイトル</h4>
+  <%= f.text_field :title %>
+
+  <h4>本文</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit '保存' %>
+
+<% end %>
