--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -11,5 +11,9 @@
   <h4>本文</h4>
   <%= f.text_area :body %>  <!--本文を入力する部分-->
 
+  <h4>画像</h4>
+  <%= f.file_field :image, accept: "image/*" %>   <!--画像を挿入する部分-->
+  <!-- ↑accept: "image/*"で、画像ファイルしか投稿できないようにしてる -->
+
   <%= f.submit '投稿' %>  <!--ボタン-->
 <% end %>
