--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -18,4 +18,12 @@
 
 <% end %>
 
-<%= link_to "編集", edit_list_path(@list.id) %> <!--編集画面(edit.html.erb)に遷移するリンクを設定-->
+ <!--編集画面(edit.html.erb)に遷移するリンクを設定-->
+<%= link_to "編集", edit_list_path(@list.id) %>
+<!-- link_to "表示させるテキスト" , "リンク先URL" [,オプション] -->
+
+<!---->
+<%= link_to "削除", list_path(@list.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+<!-- link_to "表示するテキスト",  "リンク先URL", method: :patch -->
+<!--↑このように記述すると、ルーティングの中から「HTTPメソッドがPATCHでURLが同じ」という条件で実行すべきアクションを探し実行する-->
+<!--また、誤って「削除」をクリックした場合に備え、data-confirmを用いて削除確認ダイアログも表示するよう設定-->
